syntax = "proto3";

package task;

option go_package = "task-service/proto;proto";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc ChangeStatus (ChangeStatusRequest) returns (ChangeStatusResponse);
  rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string assignee_id = 5;
  string creator_id = 6;
  string due_date = 7;
  repeated string labels = 8;
  string created_at = 9;
  string updated_at = 10;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string assignee_id = 3;
  string due_date = 4;
  repeated string labels = 5;
}
message CreateTaskResponse {
  string task_id = 1;
}

message GetTaskRequest {
  string task_id = 1;
}
message GetTaskResponse {
  Task task = 1;
}

message UpdateTaskRequest {
  string task_id = 1;
  string title = 2;
  string description = 3;
  string assignee_id = 4;
  string due_date = 5;
  repeated string labels = 6;
}
message UpdateTaskResponse {
  string task_id = 1;
}

message DeleteTaskRequest {
  string task_id = 1;
}
message DeleteTaskResponse {
  bool success = 1;
}

message ListTasksRequest {
  string status = 1;
  string assignee_id = 2;
  int32 page = 3;
  int32 page_size = 4;
}
message ListTasksResponse {
  repeated Task tasks = 1;
  int32 total = 2;
}

message ChangeStatusRequest {
  string task_id = 1;
  string status = 2;
}
message ChangeStatusResponse {
  bool success = 1;
}
